--- a/client/app/views/atencion.html
+++ b/client/app/views/atencion.html
@@ -12,8 +12,8 @@
         <span ng-if="atn.datos.ATN_estatus == 4">Completo</span> 
       </md-subheader>
       <span flex></span>
-      <md-button class="md-icon-button" aria-label="Actualizar" ng-click="atn.cargaInfo()">
-        <md-tooltip md-direction="top">
+      <md-button class="md-accent md-icon-button" aria-label="Actualizar" ng-click="atn.cargaInfo()">
+        <md-tooltip md-direction="left">
           Actualizar
         </md-tooltip>
         <ng-md-icon icon="refresh"></ng-md-icon>
@@ -31,7 +31,7 @@
             
           <md-content layout-padding layout-wrap layout-gt-sm="row" layout="column" layout-xs="column">
             
-            <section flex="50">
+            <section flex="50" ng-if="atn.datos.ATN_estatus != 2">
 
               <md-subheader class="md-no-sticky">Subir Documento</md-subheader>
               <md-divider></md-divider>
@@ -63,6 +63,16 @@
               </div>
 
             </section>
+            <section flex="50" ng-if="atn.datos.ATN_estatus == 2">
+              <div layout="column" layout-align="center center">  
+                
+                <ng-md-icon icon="check_circle" style="fill: green" size="128" class="big-button"></ng-md-icon>
+                <br><br>
+                <p>Atención Aprobada Puedes Ingresar tu Factura</p>
+                <md-button class="md-raised md-warn md-hue-2" aria-label="Subir Factura" ng-click="atn.tabPrimera = 1"  md-ripple-size="full">Subir Factura</md-button>
+
+              </div> 
+            </section> 
             <section flex="50">
 
               <md-subheader class="md-no-sticky">Archivos Disponibles</md-subheader>
@@ -132,7 +142,7 @@
 
               
               <md-progress-circular md-mode="indeterminate" md-diameter="40" ng-if="atn.solicitando"></md-progress-circular>
-              <md-button aria-label="Solicitar Autorización" ng-if="atn.imagenes.length || !atn.solicitando" ng-click="atn.solicitaAutorizacion()" ng-disabled="atn.datos.ATN_estatus != 0 || atn.requisitosForm.$invalid ">Solicitar Autorización</md-button>
+              <md-button class="md-raised md-primary" aria-label="Solicitar Autorización" ng-if="atn.imagenes.length || atn.solicitando == true" ng-click="atn.solicitaAutorizacion()" ng-disabled="atn.datos.ATN_estatus != 0 || atn.requisitosForm.$invalid ">Solicitar Autorización</md-button>
 
             </section>
 
