listos los listados de estadisticas

--- a/client/app/views/busqueda.html
+++ b/client/app/views/busqueda.html
@@ -73,7 +73,7 @@
                   </md-menu>
                   <ng-md-icon icon="inbox" style="fill:black" aria-label="Solicitado" ng-if="registro.Exp_solCancela == '1' ">
                     <md-tooltip md-direction="top">
-                      Solicitado
+                      Solicitado a Cancelación
                     </md-tooltip>
                   </ng-md-icon> 
                   <ng-md-icon icon="cancel" style="fill:red" aria-label="Cancelado" ng-if="registro.Exp_cancelado == '1' ">
