--- a/client/app/views/estadistica.html
+++ b/client/app/views/estadistica.html
@@ -1,31 +1,35 @@
-<md-content ng-if="dt.solicitudes.length > 0">
-  <md-subheader class="md-no-sticky">{{ es.titulo }}</md-subheader>
-
-  <md-table-container>
-    <table md-table>
-      <thead md-head>
-        <tr md-row>
-          <th md-column>Folio MV</th>
-          <th md-column>Folio Interno</th>
-          <th md-column>Tipo Atención</th>
-          <th md-column>Lesionado</th>
-          <th md-column>Fecha de Registro</th>
-        </tr>
-      </thead>
-      <tbody md-body>
-        <tr md-row class="fila" ng-repeat="solicitud in dt.solicitudes">
+<div class="padding-views">  
+  <md-content class="md-whiteframe-2dp">
+    <md-table-container>
+      <table md-table>
+        <thead md-head>
+          <tr md-row>
+            <th md-column>Folio MV</th>
+            <th md-column>Folio Interno</th>
+            <th md-column ng-if="es.tipo != 'expedientes' " >Tipo Atención</th>
+            <th md-column>Lesionado</th>
+            <th md-column>Cliente</th>
+            <th md-column>Fecha de Registro</th>
+          </tr>
+        </thead>
+        <tbody md-body>
+          <tr md-row class="fila" ng-repeat="dato in es.datos" ui-sref="index.detalle({folio:dato.Exp_folio})">
+            
+            <td md-cell>{{ dato.Exp_folio }}</td>
+            <td md-cell>{{ dato.Exp_fq }}</td>
+            <td md-cell ng-if="es.tipo != 'expedientes' ">{{ dato.TIA_nombre }}</td>
+            <td md-cell>{{ dato.Exp_completo }}</td>
+            <td md-cell>{{ dato.Cia_nombrecorto }}</td>
+            <td md-cell>
+               <span ng-if="!es.tipo == 'expedientes' ">{{ dato.ATN_fecreg }}</span>
+               <span ng-if=" es.tipo == 'expedientes' ">{{ dato.Exp_fecreg }}</span>
+            </td>
+       
+          </tr>
           
-          <td md-cell>{{solicitud.SOL_claveint}}</td>
-          <td md-cell>{{solicitud.TIM_nombre}}</td>
-          <td md-cell>{{solicitud.SOL_fechaReg}}</td>
-          <td md-cell>
-            <span ng-if="solicitud.SOL_estatus == '1' ">Pendiente de Autorizar</span>
-          </td>
-     
-        </tr>
-        
-      </tbody>
-    </table>
-  </md-table-container>
+        </tbody>
+      </table>
+    </md-table-container>
 
-</md-content>
+  </md-content>
+</div>
