--- a/client/app/views/componentes/toolbar.html
+++ b/client/app/views/componentes/toolbar.html
@@ -15,7 +15,8 @@
 			</md-tooltip> 
 		</md-button>
 		<md-button class="md-icon-button" aria-label="Notificaciones" ng-click="tb.notificaciones($event)" hide show-gt-sm>
-	  		<ng-md-icon icon="notifications" style="fill:white"> <span>¡</span> </ng-md-icon>
+	  		<ng-md-icon icon="notifications" style="fill:white"></ng-md-icon>
+	  		<span>¡</span>
 	  		<md-tooltip>
 				Notificaciones
 			</md-tooltip> 
