--- a/client/app/views/formatos.html
+++ b/client/app/views/formatos.html
@@ -9,7 +9,7 @@
           <p>Portada de Expediente</p>
       </md-list-item>
       <md-divider ></md-divider>
-      <md-list-item >
+      <md-list-item ng-click="fr.muestraArchivo('cuestionario.pdf','archivos',$event)">
           <ng-md-icon icon="insert_drive_file" aria-label="Detalle"></ng-md-icon>
           <p>Cuestionario de Atención Médica</p>
       </md-list-item>
