--- a/client/app/views/busqueda.html
+++ b/client/app/views/busqueda.html
@@ -69,6 +69,11 @@
                           <p>Solicitar Cancelación</p>
                         </md-button>
                       </md-menu-item>
+                      <md-menu-item>
+                        <md-button ui-sref="index.notaMedica({folio:registro.Exp_folio})">
+                          <p>Nota Médica</p>
+                        </md-button>
+                      </md-menu-item>
                     </md-menu-content>
                   </md-menu>
               </td>              
